// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Molecules/Search Search Form 1`] = `
<div
  class="rpl-search-form"
>
  <h1>
    Search results
  </h1>
   
  <!---->
    
  <div
    class="rpl-search-form__field"
  >
    <label>
      <span
        class="rpl-search-form__label-text"
      >
        Search for
      </span>
       
      <input
        class="rpl-search-form__input"
        placeholder="Enter keywords"
        type="text"
      />
    </label>
     
    <button
      class="rpl-search-form__btn"
    >
      <span
        class="rpl-visually-hidden"
      >
        Search
      </span>
       
      <svg
        aria-hidden="true"
        class="rpl-icon rpl-icon--search rpl-icon--color_primary"
        overflow="visible"
        style="width: 24px; height: 24px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M10.99 9.243c1.597-2.45 1.224-5.82-1.133-7.833C7.59-.526 4.137-.46 1.94 1.557a6 6 0 00-.19 8.653c2.043 2.045 5.205 2.293 7.527.757.031-.02.102-.083.198-.173l4.343 4.195a.941.941 0 101.308-1.354l-4.324-4.176c.098-.106.166-.184.188-.216zm-8.023-.25a4.274 4.274 0 010-6.035 4.266 4.266 0 016.03 0 4.274 4.274 0 010 6.034 4.266 4.266 0 01-6.03 0z"
        />
         
      </svg>
    </button>
  </div>
   
  <button
    class="rpl-search-form__show-filters"
  >
    <span>
      Refine search
    </span>
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`RippleStoryshots Molecules/Search/Legacy search results Card Search Results 1`] = `
<div
  class="rpl-search-results"
  pagerchangehandler="function () { [native code] }"
>
  <div
    class="rpl-search-results__info"
  >
    <div>
      Displaying 4 of 10 results
    </div>
  </div>
   
  <div
    class="rpl-row rpl-search-results__main rpl-row--gutter rpl-search-results__main--events"
  >
    <div
      class="rpl-col rpl-col--full rpl-col--6-m rpl-col--4-l rpl-col--3-xxxl"
    >
      <a
        class="rpl-link rpl-card-content rpl-card-event rpl-search-results__item rpl-component-gutter rpl-card-content--default rpl-card-content--has-link-text rpl-search-results__item--event"
        data-print-url="#"
        date="2018-07-10T09:00:00.000+10:00"
        href="#"
      >
        <div
          class="rpl-card-content__image-wrapper"
        >
          <img
            alt=""
            class="rpl-responsive-image rpl-card-content__image"
            src="https://placehold.it/580x340"
          />
        </div>
         
        <div
          class="rpl-card-content__details"
        >
          <!---->
           
          <h2
            class="rpl-card-event__title"
          >
            This is the headline of an event with a location that will stretch over over 3 lines
          </h2>
           
          <div
            class="rpl-card-event__trim-wrapper"
            style="max-height: none;"
          >
            <p
              class="rpl-card-event__summary"
            >
              This event occurs in 2018. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet.
            </p>
          </div>
           
          <!---->
           
          <!---->
        </div>
         
        <div
          class="rpl-card-content__link"
        >
          <span>
            <span>
              See event
            </span>
             
            <span
              class="rpl-text-icon__group"
            >
               details
              <svg
                aria-hidden="true"
                class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                overflow="visible"
                style="width: 9.1px; height: 8.399999999999999px;"
                viewBox="0 0 13 12"
              >
                <path
                  d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
                />
                 
              </svg>
            </span>
          </span>
        </div>
      </a>
       
      <!---->
    </div>
    <div
      class="rpl-col rpl-col--full rpl-col--6-m rpl-col--4-l rpl-col--3-xxxl"
    >
      <a
        class="rpl-link rpl-card-content rpl-card-event rpl-search-results__item rpl-component-gutter rpl-card-content--default rpl-card-content--has-link-text rpl-search-results__item--event"
        data-print-url="#"
        date="2018-07-10T09:00:00.000+10:00"
        href="#"
      >
        <div
          class="rpl-card-content__image-wrapper"
        >
          <img
            alt=""
            class="rpl-responsive-image rpl-card-content__image"
            src="https://placehold.it/580x340"
          />
        </div>
         
        <div
          class="rpl-card-content__details"
        >
          <!---->
           
          <h2
            class="rpl-card-event__title"
          >
            This is the headline of an event with a location that will stretch over over 3 lines
          </h2>
           
          <div
            class="rpl-card-event__trim-wrapper"
            style="max-height: none;"
          >
            <p
              class="rpl-card-event__summary"
            >
              This event occurs in 2018. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet.
            </p>
          </div>
           
          <!---->
           
          <!---->
        </div>
         
        <div
          class="rpl-card-content__link"
        >
          <span>
            <span>
              See event
            </span>
             
            <span
              class="rpl-text-icon__group"
            >
               details
              <svg
                aria-hidden="true"
                class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                overflow="visible"
                style="width: 9.1px; height: 8.399999999999999px;"
                viewBox="0 0 13 12"
              >
                <path
                  d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
                />
                 
              </svg>
            </span>
          </span>
        </div>
      </a>
       
      <!---->
    </div>
    <div
      class="rpl-col rpl-col--full rpl-col--6-m rpl-col--4-l rpl-col--3-xxxl"
    >
      <a
        class="rpl-link rpl-card-content rpl-card-event rpl-search-results__item rpl-component-gutter rpl-card-content--no-image rpl-card-content--has-border rpl-card-content--default rpl-card-content--has-link-text rpl-search-results__item--event"
        data-print-url="#"
        date="2018-07-10T09:00:00.000+10:00"
        href="#"
      >
        <div
          class="rpl-card-content__image-wrapper"
        >
          <!---->
        </div>
         
        <div
          class="rpl-card-content__details"
        >
          <!---->
           
          <h2
            class="rpl-card-event__title"
          >
            This event has no image.
          </h2>
           
          <div
            class="rpl-card-event__trim-wrapper"
            style="max-height: none;"
          >
            <p
              class="rpl-card-event__summary"
            >
              This event occurs in 2018. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet.
            </p>
          </div>
           
          <!---->
           
          <!---->
        </div>
         
        <div
          class="rpl-card-content__link"
        >
          <span>
            <span>
              See event
            </span>
             
            <span
              class="rpl-text-icon__group"
            >
               details
              <svg
                aria-hidden="true"
                class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                overflow="visible"
                style="width: 9.1px; height: 8.399999999999999px;"
                viewBox="0 0 13 12"
              >
                <path
                  d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
                />
                 
              </svg>
            </span>
          </span>
        </div>
      </a>
       
      <!---->
    </div>
    <div
      class="rpl-col rpl-col--full rpl-col--6-m rpl-col--4-l rpl-col--3-xxxl"
    >
      <a
        class="rpl-link rpl-card-content rpl-card-event rpl-search-results__item rpl-component-gutter rpl-card-content--default rpl-card-content--has-link-text rpl-search-results__item--event"
        data-print-url="#"
        date="2018-07-10T09:00:00.000+10:00"
        href="#"
      >
        <div
          class="rpl-card-content__image-wrapper"
        >
          <img
            alt=""
            class="rpl-responsive-image rpl-card-content__image"
            src="https://placehold.it/580x340"
          />
        </div>
         
        <div
          class="rpl-card-content__details"
        >
          <!---->
           
          <h2
            class="rpl-card-event__title"
          >
            This is the headline of an event with a location that will stretch over over 3 lines
          </h2>
           
          <div
            class="rpl-card-event__trim-wrapper"
            style="max-height: none;"
          >
            <p
              class="rpl-card-event__summary"
            >
              This event occurs in 2018. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet lorem ipsum dolor sit amet.
            </p>
          </div>
           
          <!---->
           
          <!---->
        </div>
         
        <div
          class="rpl-card-content__link"
        >
          <span>
            <span>
              See event
            </span>
             
            <span
              class="rpl-text-icon__group"
            >
               details
              <svg
                aria-hidden="true"
                class="rpl-icon rpl-icon--arrow_right_primary rpl-icon--color_primary rpl-text-icon--after"
                overflow="visible"
                style="width: 9.1px; height: 8.399999999999999px;"
                viewBox="0 0 13 12"
              >
                <path
                  d="M11.74 5.326l-4.546-5A1.003 1.003 0 005.781.259a1.001 1.001 0 00-.066 1.413l3.024 3.327H1a1 1 0 100 2h7.739l-3.024 3.327a1.001 1.001 0 00.739 1.673 1 1 0 00.74-.327l4.546-5a1 1 0 000-1.346z"
                />
                 
              </svg>
            </span>
          </span>
        </div>
      </a>
       
      <!---->
    </div>
     
    <!---->
     
    <!---->
  </div>
   
  <div
    class="rpl-row rpl-row--gutter"
  >
    <div
      class="rpl-col rpl-col--full rpl-col--6-m rpl-col--4-l rpl-col--3-xxxl"
    >
      <nav
        aria-label="Search"
        class="rpl-pagination"
      >
        <ol
          class="rpl-pagination__list"
        >
          <li
            aria-current="page"
            aria-disabled="true"
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step rpl-pagination__step-current"
              disabled="disabled"
            >
              <span
                class="rpl-pagination__step-label"
              >
                current page
              </span>
              
        1
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        2
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        3
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        4
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        5
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
        </ol>
         
        <div
          class="rpl-pagination__controls"
        >
          <!---->
           
          <button
            class="rpl-pagination__nav"
          >
            <span>
              Next page
            </span>
             
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--right rpl-icon--color_primary"
              overflow="visible"
              style="width: 8px; height: 12.8px;"
              viewBox="0 0 5 8"
            >
              <path
                d="M.293 7.707a1 1 0 010-1.414L2.586 4 .293 1.707A1 1 0 011.707.293l3 3a1 1 0 010 1.414l-3 3a1 1 0 01-1.414 0z"
              />
               
            </svg>
          </button>
        </div>
      </nav>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Search/Legacy search results Grant Search Results 1`] = `
<div
  class="rpl-search-results"
  pagerchangehandler="function () { [native code] }"
>
  <div
    class="rpl-search-results__info"
  >
    <div>
      Displaying 3 of 3 results
    </div>
  </div>
   
  <div
    class="rpl-row rpl-search-results__main rpl-row--gutter"
  >
    <div
      class="rpl-col rpl-col--full"
    >
      <div
        class="rpl-grants-list-item rpl-search-results__item rpl-component-gutter rpl-search-results__item--grant"
      >
        <div
          class="rpl-grants-overview"
        >
          <div
            class="rpl-list rpl-grants-overview__list rpl-list--large"
          >
            <h2
              class="rpl-list__title"
            >
              <a
                class="rpl-link rpl-text-link rpl-list__title-inner"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-text-label"
                  >
                    <span>
                      Program Overview
                    </span>
                  </span>
                </span>
              </a>
            </h2>
              
            <div
              class="rpl-list__list"
            >
              <div
                class="rpl-list__list-item"
                data-tid="grants-funding"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--dollar_negative rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M5.313 8.95C4.43 8.78 3.723 8.26 3.5 7.488l1.4-.432c.175.533.577.773 1.118.773.54 0 .851-.249.851-.58 0-.258-.118-.433-.53-.516l-1.145-.258c-.824-.193-1.547-.626-1.547-1.676 0-.94.657-1.577 1.666-1.758v-.607c0-.246.158-.434.444-.434h.483c.247 0 .405.186.407.434v.631c.755.187 1.327.657 1.55 1.329l-1.328.35c-.182-.452-.586-.608-.96-.608-.468 0-.77.25-.77.58 0 .23.1.406.449.488l1.153.258c.989.24 1.566.765 1.566 1.685 0 .993-.712 1.605-1.662 1.794v.59c0 .243-.103.469-.405.469h-.483c-.37 0-.444-.3-.444-.469V8.95zM6 0C2.691 0 0 2.692 0 6s2.691 6 6 6c3.308 0 6-2.692 6-6S9.308 0 6 0z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  $10,000 - $30,000
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-audience"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--user rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M6 0c3.308 0 6 2.692 6 6s-2.692 6-6 6c-3.309 0-6-2.692-6-6s2.691-6 6-6zm1.2 6h-.223a2.334 2.334 0 01-1.953 0H4.8A1.8 1.8 0 003 7.8v.557c0 .355.288.643.643.643h4.714A.643.643 0 009 8.357V7.8A1.8 1.8 0 007.2 6zM6 5.5a1.75 1.75 0 10.001-3.499A1.75 1.75 0 006 5.5z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  individuals, organisations, local council
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-status"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--cross_circle rpl-icon--color_danger"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 0C5.371 0 0 5.371 0 12s5.371 12 12 12 12-5.371 12-12S18.629 0 12 0zm5.884 15.15a.581.581 0 010 .823l-1.916 1.91a.581.581 0 01-.823 0L12 14.71l-3.15 3.174a.581.581 0 01-.823 0l-1.91-1.916a.581.581 0 010-.823L9.29 12 6.116 8.85a.581.581 0 010-.823l1.916-1.916a.581.581 0 01.823 0L12 9.291l3.15-3.175a.581.581 0 01.823 0l1.916 1.916a.581.581 0 010 .823L14.709 12l3.175 3.15z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  Closed
                </span>
              </div>
            </div>
             
          </div>
           
          <div
            class="rpl-markup tide-wysiwyg app-wysiwyg rpl-grants-overview__description"
          >
            <div
              class="rpl-markup__inner"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
            </div>
          </div>
           
          <!---->
        </div>
         
        <ul
          class="rpl-grants-list-item__tags"
        >
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
    <div
      class="rpl-col rpl-col--full"
    >
      <div
        class="rpl-grants-list-item rpl-search-results__item rpl-component-gutter rpl-search-results__item--grant"
      >
        <div
          class="rpl-grants-overview"
        >
          <div
            class="rpl-list rpl-grants-overview__list rpl-list--large"
          >
            <h2
              class="rpl-list__title"
            >
              <a
                class="rpl-link rpl-text-link rpl-list__title-inner"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-text-label"
                  >
                    <span>
                      Program Overview
                    </span>
                  </span>
                </span>
              </a>
            </h2>
              
            <div
              class="rpl-list__list"
            >
              <div
                class="rpl-list__list-item"
                data-tid="grants-funding"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--dollar_negative rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M5.313 8.95C4.43 8.78 3.723 8.26 3.5 7.488l1.4-.432c.175.533.577.773 1.118.773.54 0 .851-.249.851-.58 0-.258-.118-.433-.53-.516l-1.145-.258c-.824-.193-1.547-.626-1.547-1.676 0-.94.657-1.577 1.666-1.758v-.607c0-.246.158-.434.444-.434h.483c.247 0 .405.186.407.434v.631c.755.187 1.327.657 1.55 1.329l-1.328.35c-.182-.452-.586-.608-.96-.608-.468 0-.77.25-.77.58 0 .23.1.406.449.488l1.153.258c.989.24 1.566.765 1.566 1.685 0 .993-.712 1.605-1.662 1.794v.59c0 .243-.103.469-.405.469h-.483c-.37 0-.444-.3-.444-.469V8.95zM6 0C2.691 0 0 2.692 0 6s2.691 6 6 6c3.308 0 6-2.692 6-6S9.308 0 6 0z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  $10,000 - $30,000
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-audience"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--user rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M6 0c3.308 0 6 2.692 6 6s-2.692 6-6 6c-3.309 0-6-2.692-6-6s2.691-6 6-6zm1.2 6h-.223a2.334 2.334 0 01-1.953 0H4.8A1.8 1.8 0 003 7.8v.557c0 .355.288.643.643.643h4.714A.643.643 0 009 8.357V7.8A1.8 1.8 0 007.2 6zM6 5.5a1.75 1.75 0 10.001-3.499A1.75 1.75 0 006 5.5z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  individuals, organisations, local council
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-status"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--cross_circle rpl-icon--color_danger"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 0C5.371 0 0 5.371 0 12s5.371 12 12 12 12-5.371 12-12S18.629 0 12 0zm5.884 15.15a.581.581 0 010 .823l-1.916 1.91a.581.581 0 01-.823 0L12 14.71l-3.15 3.174a.581.581 0 01-.823 0l-1.91-1.916a.581.581 0 010-.823L9.29 12 6.116 8.85a.581.581 0 010-.823l1.916-1.916a.581.581 0 01.823 0L12 9.291l3.15-3.175a.581.581 0 01.823 0l1.916 1.916a.581.581 0 010 .823L14.709 12l3.175 3.15z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  Closed
                </span>
              </div>
            </div>
             
          </div>
           
          <div
            class="rpl-markup tide-wysiwyg app-wysiwyg rpl-grants-overview__description"
          >
            <div
              class="rpl-markup__inner"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
            </div>
          </div>
           
          <!---->
        </div>
         
        <ul
          class="rpl-grants-list-item__tags"
        >
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
    <div
      class="rpl-col rpl-col--full"
    >
      <div
        class="rpl-grants-list-item rpl-search-results__item rpl-component-gutter rpl-search-results__item--grant"
      >
        <div
          class="rpl-grants-overview"
        >
          <div
            class="rpl-list rpl-grants-overview__list rpl-list--large"
          >
            <h2
              class="rpl-list__title"
            >
              <a
                class="rpl-link rpl-text-link rpl-list__title-inner"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-text-label"
                  >
                    <span>
                      Program Overview
                    </span>
                  </span>
                </span>
              </a>
            </h2>
              
            <div
              class="rpl-list__list"
            >
              <div
                class="rpl-list__list-item"
                data-tid="grants-funding"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--dollar_negative rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M5.313 8.95C4.43 8.78 3.723 8.26 3.5 7.488l1.4-.432c.175.533.577.773 1.118.773.54 0 .851-.249.851-.58 0-.258-.118-.433-.53-.516l-1.145-.258c-.824-.193-1.547-.626-1.547-1.676 0-.94.657-1.577 1.666-1.758v-.607c0-.246.158-.434.444-.434h.483c.247 0 .405.186.407.434v.631c.755.187 1.327.657 1.55 1.329l-1.328.35c-.182-.452-.586-.608-.96-.608-.468 0-.77.25-.77.58 0 .23.1.406.449.488l1.153.258c.989.24 1.566.765 1.566 1.685 0 .993-.712 1.605-1.662 1.794v.59c0 .243-.103.469-.405.469h-.483c-.37 0-.444-.3-.444-.469V8.95zM6 0C2.691 0 0 2.692 0 6s2.691 6 6 6c3.308 0 6-2.692 6-6S9.308 0 6 0z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  $10,000 - $30,000
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-audience"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--user rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M6 0c3.308 0 6 2.692 6 6s-2.692 6-6 6c-3.309 0-6-2.692-6-6s2.691-6 6-6zm1.2 6h-.223a2.334 2.334 0 01-1.953 0H4.8A1.8 1.8 0 003 7.8v.557c0 .355.288.643.643.643h4.714A.643.643 0 009 8.357V7.8A1.8 1.8 0 007.2 6zM6 5.5a1.75 1.75 0 10.001-3.499A1.75 1.75 0 006 5.5z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  individuals, organisations, local council
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-status"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--cross_circle rpl-icon--color_danger"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 0C5.371 0 0 5.371 0 12s5.371 12 12 12 12-5.371 12-12S18.629 0 12 0zm5.884 15.15a.581.581 0 010 .823l-1.916 1.91a.581.581 0 01-.823 0L12 14.71l-3.15 3.174a.581.581 0 01-.823 0l-1.91-1.916a.581.581 0 010-.823L9.29 12 6.116 8.85a.581.581 0 010-.823l1.916-1.916a.581.581 0 01.823 0L12 9.291l3.15-3.175a.581.581 0 01.823 0l1.916 1.916a.581.581 0 010 .823L14.709 12l3.175 3.15z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  Closed
                </span>
              </div>
            </div>
             
          </div>
           
          <div
            class="rpl-markup tide-wysiwyg app-wysiwyg rpl-grants-overview__description"
          >
            <div
              class="rpl-markup__inner"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
            </div>
          </div>
           
          <!---->
        </div>
         
        <ul
          class="rpl-grants-list-item__tags"
        >
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
    <div
      class="rpl-col rpl-col--full"
    >
      <div
        class="rpl-grants-list-item rpl-search-results__item rpl-component-gutter rpl-search-results__item--grant"
      >
        <div
          class="rpl-grants-overview"
        >
          <div
            class="rpl-list rpl-grants-overview__list rpl-list--large"
          >
            <h2
              class="rpl-list__title"
            >
              <a
                class="rpl-link rpl-text-link rpl-list__title-inner"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-text-label"
                  >
                    <span>
                      Program Overview
                    </span>
                  </span>
                </span>
              </a>
            </h2>
              
            <div
              class="rpl-list__list"
            >
              <div
                class="rpl-list__list-item"
                data-tid="grants-funding"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--dollar_negative rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M5.313 8.95C4.43 8.78 3.723 8.26 3.5 7.488l1.4-.432c.175.533.577.773 1.118.773.54 0 .851-.249.851-.58 0-.258-.118-.433-.53-.516l-1.145-.258c-.824-.193-1.547-.626-1.547-1.676 0-.94.657-1.577 1.666-1.758v-.607c0-.246.158-.434.444-.434h.483c.247 0 .405.186.407.434v.631c.755.187 1.327.657 1.55 1.329l-1.328.35c-.182-.452-.586-.608-.96-.608-.468 0-.77.25-.77.58 0 .23.1.406.449.488l1.153.258c.989.24 1.566.765 1.566 1.685 0 .993-.712 1.605-1.662 1.794v.59c0 .243-.103.469-.405.469h-.483c-.37 0-.444-.3-.444-.469V8.95zM6 0C2.691 0 0 2.692 0 6s2.691 6 6 6c3.308 0 6-2.692 6-6S9.308 0 6 0z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  $10,000 - $30,000
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-audience"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--user rpl-icon--color_primary"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 12 12"
                  >
                    <path
                      d="M6 0c3.308 0 6 2.692 6 6s-2.692 6-6 6c-3.309 0-6-2.692-6-6s2.691-6 6-6zm1.2 6h-.223a2.334 2.334 0 01-1.953 0H4.8A1.8 1.8 0 003 7.8v.557c0 .355.288.643.643.643h4.714A.643.643 0 009 8.357V7.8A1.8 1.8 0 007.2 6zM6 5.5a1.75 1.75 0 10.001-3.499A1.75 1.75 0 006 5.5z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  individuals, organisations, local council
                </span>
              </div>
              <div
                class="rpl-list__list-item"
                data-tid="grants-status"
              >
                <span
                  class="rpl-list__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="rpl-icon rpl-icon--cross_circle rpl-icon--color_danger"
                    overflow="visible"
                    style="width: 20px; height: 20px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 0C5.371 0 0 5.371 0 12s5.371 12 12 12 12-5.371 12-12S18.629 0 12 0zm5.884 15.15a.581.581 0 010 .823l-1.916 1.91a.581.581 0 01-.823 0L12 14.71l-3.15 3.174a.581.581 0 01-.823 0l-1.91-1.916a.581.581 0 010-.823L9.29 12 6.116 8.85a.581.581 0 010-.823l1.916-1.916a.581.581 0 01.823 0L12 9.291l3.15-3.175a.581.581 0 01.823 0l1.916 1.916a.581.581 0 010 .823L14.709 12l3.175 3.15z"
                    />
                     
                  </svg>
                </span>
                 
                <span
                  class="rpl-list__text"
                >
                  Closed
                </span>
              </div>
            </div>
             
          </div>
           
          <div
            class="rpl-markup tide-wysiwyg app-wysiwyg rpl-grants-overview__description"
          >
            <div
              class="rpl-markup__inner"
            >
              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas.
            </div>
          </div>
           
          <!---->
        </div>
         
        <ul
          class="rpl-grants-list-item__tags"
        >
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
          <li
            class="rpl-grants-list-item__tag"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
     
    <!---->
     
    <!---->
  </div>
   
  <div
    class="rpl-row rpl-row--gutter"
  >
    <div
      class="rpl-col rpl-col--full rpl-col--6-m rpl-col--4-l rpl-col--3-xxxl"
    >
      <nav
        aria-label="Search"
        class="rpl-pagination"
      >
        <ol
          class="rpl-pagination__list"
        >
          <li
            aria-current="page"
            aria-disabled="true"
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step rpl-pagination__step-current"
              disabled="disabled"
            >
              <span
                class="rpl-pagination__step-label"
              >
                current page
              </span>
              
        1
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        2
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        3
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        4
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        5
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
        </ol>
         
        <div
          class="rpl-pagination__controls"
        >
          <!---->
           
          <button
            class="rpl-pagination__nav"
          >
            <span>
              Next page
            </span>
             
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--right rpl-icon--color_primary"
              overflow="visible"
              style="width: 8px; height: 12.8px;"
              viewBox="0 0 5 8"
            >
              <path
                d="M.293 7.707a1 1 0 010-1.414L2.586 4 .293 1.707A1 1 0 011.707.293l3 3a1 1 0 010 1.414l-3 3a1 1 0 01-1.414 0z"
              />
               
            </svg>
          </button>
        </div>
      </nav>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Molecules/Search/Legacy search results Search Result 1`] = `
<div
  class="rpl-search-result"
>
  <a
    class="rpl-link"
    data-print-url="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
    href="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
  >
    <span
      class="rpl-link__inner"
    >
      <h2
        class="rpl-search-result__heading"
      >
        Schools private policy
      </h2>
    </span>
  </a>
   
  <a
    class="rpl-link rpl-search-result__link"
    data-print-url="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
    href="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
  >
    <span
      class="rpl-link__inner"
    >
      www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx
    </span>
  </a>
   
  <p
    class="rpl-search-result__date-description"
  >
    <span
      class="rpl-search-result__date"
    >
      Jul 10, 2018
    </span>
     
    <span>
      
    </span>
  </p>
   
  <ul
    class="rpl-search-result__terms"
  >
    <li
      class="rpl-search-result__term"
    >
      <div
        class="rpl-meta-tag rpl-meta-tag--light"
      >
        <a
          class="rpl-link rpl-meta-tag__link"
          data-print-url="#"
          href="#"
        >
          <span
            class="rpl-link__inner"
          >
            <span
              class="rpl-meta-tag__text"
            >
              This is a content tag
            </span>
          </span>
        </a>
      </div>
    </li>
    <li
      class="rpl-search-result__term"
    >
      <div
        class="rpl-meta-tag rpl-meta-tag--light"
      >
        <a
          class="rpl-link rpl-meta-tag__link"
          data-print-url="#"
          href="#"
        >
          <span
            class="rpl-link__inner"
          >
            <span
              class="rpl-meta-tag__text"
            >
              This is a content tag
            </span>
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`RippleStoryshots Molecules/Search/Legacy search results Search Results 1`] = `
<div
  class="rpl-search-results"
>
  <div
    class="rpl-search-results__info"
  >
    <div>
      Displaying 10 of 70 results
    </div>
  </div>
   
  <div
    class="rpl-row rpl-search-results__main rpl-row--gutter"
  >
    <div
      class="rpl-col rpl-col--full"
    >
      <div
        class="rpl-search-result rpl-search-results__item rpl-component-gutter"
      >
        <a
          class="rpl-link"
          data-print-url="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
          href="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
        >
          <span
            class="rpl-link__inner"
          >
            <h2
              class="rpl-search-result__heading"
            >
              Schools private policy
            </h2>
          </span>
        </a>
         
        <a
          class="rpl-link rpl-search-result__link"
          data-print-url="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
          href="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
        >
          <span
            class="rpl-link__inner"
          >
            www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx
          </span>
        </a>
         
        <p
          class="rpl-search-result__date-description"
        >
          <span
            class="rpl-search-result__date"
          >
            Jul 10, 2018
          </span>
           
          <span>
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem
          </span>
        </p>
         
        <ul
          class="rpl-search-result__terms"
        >
          <li
            class="rpl-search-result__term"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
          <li
            class="rpl-search-result__term"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
    <div
      class="rpl-col rpl-col--full"
    >
      <div
        class="rpl-search-result rpl-search-results__item rpl-component-gutter"
      >
        <a
          class="rpl-link"
          data-print-url="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
          href="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
        >
          <span
            class="rpl-link__inner"
          >
            <h2
              class="rpl-search-result__heading"
            >
              Schools private policy
            </h2>
          </span>
        </a>
         
        <a
          class="rpl-link rpl-search-result__link"
          data-print-url="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
          href="//www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx"
        >
          <span
            class="rpl-link__inner"
          >
            www.education.vic.gov.au/Pages/schoolsprivacypolicy.aspx
          </span>
        </a>
         
        <p
          class="rpl-search-result__date-description"
        >
          <span
            class="rpl-search-result__date"
          >
            Jul 10, 2018
          </span>
           
          <span>
            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem
          </span>
        </p>
         
        <ul
          class="rpl-search-result__terms"
        >
          <li
            class="rpl-search-result__term"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
          <li
            class="rpl-search-result__term"
          >
            <div
              class="rpl-meta-tag rpl-meta-tag--light"
            >
              <a
                class="rpl-link rpl-meta-tag__link"
                data-print-url="#"
                href="#"
              >
                <span
                  class="rpl-link__inner"
                >
                  <span
                    class="rpl-meta-tag__text"
                  >
                    This is a content tag
                  </span>
                </span>
              </a>
            </div>
          </li>
        </ul>
      </div>
       
      <!---->
    </div>
     
    <!---->
     
    <!---->
  </div>
   
  <div
    class="rpl-row rpl-row--gutter"
  >
    <div
      class="rpl-col rpl-col--full rpl-col--6-m rpl-col--4-l rpl-col--3-xxxl"
    >
      <nav
        aria-label="Search"
        class="rpl-pagination"
      >
        <ol
          class="rpl-pagination__list"
        >
          <li
            aria-current="page"
            aria-disabled="true"
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step rpl-pagination__step-current"
              disabled="disabled"
            >
              <span
                class="rpl-pagination__step-label"
              >
                current page
              </span>
              
        1
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        2
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        3
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        4
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
          <li
            class="rpl-pagination__list-item"
          >
            <button
              class="rpl-pagination__step"
            >
              <span
                class="rpl-pagination__step-label"
              >
                Go to page
              </span>
              
        5
      
            </button>
             
            <span
              aria-hidden="true"
              class="rpl-pagination__list-item-slash"
            >
              /
            </span>
          </li>
        </ol>
         
        <div
          class="rpl-pagination__controls"
        >
          <!---->
           
          <button
            class="rpl-pagination__nav"
          >
            <span>
              Next page
            </span>
             
            <svg
              aria-hidden="true"
              class="rpl-icon rpl-icon--right rpl-icon--color_primary"
              overflow="visible"
              style="width: 8px; height: 12.8px;"
              viewBox="0 0 5 8"
            >
              <path
                d="M.293 7.707a1 1 0 010-1.414L2.586 4 .293 1.707A1 1 0 011.707.293l3 3a1 1 0 010 1.414l-3 3a1 1 0 01-1.414 0z"
              />
               
            </svg>
          </button>
        </div>
      </nav>
       
      <!---->
    </div>
  </div>
</div>
`;
